--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.h2.console.path=/h2-console
 
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8180/auth/realms/AportMe/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8180/auth/realms/AportMe
