--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.h2.console.path=/h2-console
 
+spring.mail.host=smtp.gmail.com
+spring.mail.username=aportme@gmail.com
+spring.mail.password=aportMe?!90a
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
