--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
 
 appUrl=http://localhost:8080
+activation.token.url=http://localhost:8080/api/activateAccount?token=
