JWT filters ant authentication/authorization flow

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
 
 appUrl=http://localhost:8080
+
+jwt.encryption.secret=d'4z|@}6/SRPGU:QoWw]C?_G"]-EdJ,'g<ZB!$*e.C6<S+T7S+x1v;cmB.1E3Gb
+jwt.access.token.expiration.seconds=10000
