--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
             <version>3.10.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.10</version>
+        </dependency>
+
         <!--DATE&TIME-->
         <dependency>
             <groupId>joda-time</groupId>
