Extract static urls to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
 
 appUrl=http://localhost:8080
+frontendUrl=http://localhost:8081
 activation.token.url=http://localhost:8080/api/account/activation?token=
 
 jwt.header.string=Authorization
