--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.h2.console.path=/h2-console
 
-spring.data.web.pageable.size-parameter=size
-spring.data.web.pageable.page-parameter=page
+spring.data.web.pageable.size-parameter=pageSize
+spring.data.web.pageable.page-parameter=pageNumber
 spring.data.web.pageable.default-page-size=20
 spring.data.web.pageable.one-indexed-parameters=false
 spring.data.web.pageable.max-page-size=50
