Adding reset password logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,8 @@ spring.mail.default-encoding=UTF-8
 
 appUrl=http://localhost:8080
 frontendUrl=http://localhost:8081
-activation.token.url=http://localhost:8080/api/account/activation?token=
+confirm.reset.password.token.url=/resetPassword/
+confirm.reset.password.token.expiration.seconds=960
 
 jwt.header.string=Authorization
 jwt.token.type=Bearer
