store user role, id and email in jwt token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,4 +37,4 @@ confirm.reset.password.token.expiration.seconds=960
 jwt.header.string=Authorization
 jwt.token.type=Bearer
 jwt.encryption.secret=d'4z|@}6/SRPGU:QoWw]C?_G"]-EdJ,'g<ZB!$*e.C6<S+T7S+x1v;cmB.1E3Gb
-jwt.access.token.expiration.seconds=3600
+jwt.access.token.expiration.seconds=3600000
