--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,27 @@
-spring.datasource.url=jdbc:h2:mem:~/adoptme
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driverClassName=org.h2.Driver
+#Postgres
+spring.datasource.initialization-mode=never
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+#Local app | docker db
+#spring.datasource.url=jdbc:postgresql://localhost:6200/aportme
+#Docker app | docker db
+spring.datasource.url=jdbc:postgresql://aportme-db:5432/aportme
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.continue-on-error=true
 
-spring.h2.console.enabled=true
+#H2
+#spring.datasource.url=jdbc:h2:mem:~/adoptme
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.h2.console.path=/h2-console
 
 spring.data.web.pageable.size-parameter=pageSize
 spring.data.web.pageable.page-parameter=pageNumber
