--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,5 +37,5 @@ confirm.reset.password.token.expiration.seconds=960
 jwt.header.string=Authorization
 jwt.token.type=Bearer
 jwt.encryption.secret=d'4z|@}6/SRPGU:QoWw]C?_G"]-EdJ,'g<ZB!$*e.C6<S+T7S+x1v;cmB.1E3Gb
-jwt.auth.token.expiration.seconds=3600
+jwt.auth.token.expiration.seconds=360000000
 jwt.refresh.token.expiration.seconds=360000
