Add OVH mail configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,9 +20,9 @@ spring.data.web.pageable.max-page-size=50
 spring.data.web.pageable.prefix=
 spring.data.web.pageable.qualifier-delimiter=_
 
-spring.mail.host=smtp.gmail.com
-spring.mail.username=aportme@gmail.com
-spring.mail.password=aportMe?!90a
+spring.mail.host=pro2.mail.ovh.net
+spring.mail.username=kontakt@aportme.com
+spring.mail.password=mq4zCow7]4wszD!
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
