Change mail config on production

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -18,17 +18,17 @@ spring.data.web.pageable.max-page-size=50
 spring.data.web.pageable.prefix=
 spring.data.web.pageable.qualifier-delimiter=_
 
-spring.mail.host=smtp.gmail.com
-spring.mail.username=aportme@gmail.com
-spring.mail.password=aportMe?!90a
+spring.mail.host=pro2.mail.ovh.net
+spring.mail.username=kontakt@aportme.com
+spring.mail.password=mq4zCow7]4wszD!
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
 
-appUrl=http://146.59.17.80:8080
-frontendUrl=http://146.59.17.80:8080
+appUrl=https://www.aportme.com
+frontendUrl=https://www.aportme.com
 confirm.reset.password.token.url=/resetPassword/
 confirm.reset.password.token.expiration.seconds=960
 
