--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -10,10 +10,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: ls -a via ssh
+      - name: Run bash script for backend building on VPS
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: chmod +x /home/aportmeadmin/aportme/backend.sh && cd /home/aportmeadmin/aportme  && sudo ./backend.sh
+          command: sudo chmod +x /home/aportmeadmin/aportme/backend.sh && cd /home/aportmeadmin/aportme  && sudo ./backend.sh
           host: ${{ secrets.HOST }}
           port: ${{ secrets.PORT }}
           username: ${{ secrets.USERNAME}}
