--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,10 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
 
+firebase.project.id=22785984459
+firebase.key.path=./src/main/resources/service-account.json
+firebase.bucket.name=aportme-bda4c.appspot.com
+
 appUrl=http://localhost:8080
 frontendUrl=http://localhost:8081
 confirm.reset.password.token.url=/resetPassword/
